client dashboard fine, sellers not showing